--- a/xanadu_sphinx_theme/layout.html
+++ b/xanadu_sphinx_theme/layout.html
@@ -6,6 +6,7 @@
 
   <meta property="og:title" content="{{ title|striptags|e }} &#8212; PennyLane">
   <meta property="og:url" content="{{ pageurl }}">
+  <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
 
   {% if metatags is defined %}
