--- a/xanadu_sphinx_theme/layout.html
+++ b/xanadu_sphinx_theme/layout.html
@@ -309,8 +309,7 @@
 
       var githubLink = "https://github.com/" + "{{ theme_github_repo }}" + "/blob/master/" + tutorialUrlArray.join("/") + ".py",
           pythonLink = $(".sphx-glr-download .reference.download")[0].href,
-          notebookLink = $(".sphx-glr-download .reference.download")[1].href,
-          notebookDownloadPath = notebookLink.split('_downloads')[1].split('/').pop();
+          notebookLink = $(".sphx-glr-download .reference.download")[1].href;
 
       $(".download-python-link").wrap("<a href=" + pythonLink + " data-behavior='call-to-action-event' data-response='Download Python script' download target='_blank'/>");
       $(".download-notebook-link").wrap("<a href=" + notebookLink + " data-behavior='call-to-action-event' data-response='Download Notebook' download target='_blank'/>");
