Fix silent errors while loading custom reST directives

--- a/xanadu_sphinx_theme/footer.html
+++ b/xanadu_sphinx_theme/footer.html
@@ -4,7 +4,7 @@
   <div class="footer-top">
     <!-- About -->
     <div class="footer-about">
-      <a class="footer-icon" href="https://pennylane.ai/">
+      <a class="footer-icon" href="{{ theme_footer_about.href }}">
         <img src="{{ theme_footer_about.icon }}" alt="{{ theme_footer_about.title }}" height="40px" width="40px">
       </a>
       <p class="footer-description">
