Rename 'socials' to 'social icons'

--- a/xanadu_sphinx_theme/footer.html
+++ b/xanadu_sphinx_theme/footer.html
@@ -12,10 +12,10 @@
       </p>
     </div>
 
-    <div class="footer-socials-and-taglines">
-      <!-- Social -->
-      <div class="footer-socials">
-        {% for link in theme_footer_socials %}
+    <div class="footer-social-icons-and-taglines">
+      <!-- Social Icons -->
+      <div class="footer-social-icons">
+        {% for link in theme_footer_social_icons %}
           <a href="{{ link.href }}">
             <i class="{{ link.icon }}"></i>
           </a>
