Fix layout discrepencies between PennyLane website

--- a/xanadu_sphinx_theme/header.html
+++ b/xanadu_sphinx_theme/header.html
@@ -180,6 +180,7 @@
           render_mobile_navbar_link(
             link.name,
             link.href,
+            true,
           )
       }}
     {% endfor %}
