--- a/xanadu_sphinx_theme/layout.html
+++ b/xanadu_sphinx_theme/layout.html
@@ -408,21 +408,21 @@
       for (const [i, link] of navbar_left_links.entries()) {
         const dropdown = link.querySelector(".navbar-dropdown");
         if (dropdown !== null) {
-          timers.push({dropdown: dropdown, timeout: undefined});
+          timers.push({link: link, timeout: undefined});
 
           link.addEventListener("mouseenter", function(event){
             for (const [j, timer] of Object.entries(timers)) {
               clearTimeout(timer.timeout);
               if (i !== j) {
-                timer.dropdown.classList.remove("open")
+                timer.link.classList.remove("open")
               }
             }
-            dropdown.classList.add("open");
+            link.classList.add("open");
           });
 
           link.addEventListener("mouseleave", function(event){
             timers[i].timeout = setTimeout(function(event){
-              dropdown.classList.remove("open");
+              link.classList.remove("open");
             }, 1000);
           });
         }
@@ -445,7 +445,7 @@
   <!-- Toggles whether the navbar dropdown is displayed on mobile. -->
   <script type="text/javascript">
     function toggleMobileNavbar(button) {
-      const dropdown = document.querySelector(".mobile.navbar-links > ul");
+      const dropdown = document.querySelector(".mobile.navbar-links");
       if (dropdown !== null) {
         dropdown.classList.toggle("open");
         button.classList.toggle("open");
@@ -456,10 +456,7 @@
   <!-- Toggles whether the dropdown from a navbar link is displayed on mobile. -->
   <script type="text/javascript">
     function toggleMobileNavbarLink(button) {
-      const dropdown = button.parentElement.querySelector("ul");
-      if (dropdown !== null) {
-        dropdown.classList.toggle("open");
-      }
+      const link = button.parentElement.classList.toggle("open");
     }
   </script>
 
