--- a/xanadu_sphinx_theme/layout.html
+++ b/xanadu_sphinx_theme/layout.html
@@ -403,12 +403,12 @@
   <!-- Delays the closing of dropdowns on the LHS of the navigation bar. -->
   <script type="text/javascript">
     $(document).ready(() => {
-      const timers = [];
+      const timers = {};
       const navbar_left_links = document.querySelectorAll(".navbar-left-link");
       for (const [i, link] of navbar_left_links.entries()) {
         const dropdown = link.querySelector(".navbar-dropdown");
         if (dropdown !== null) {
-          timers.push({link: link, timeout: undefined});
+          timers[i] = {link: link, timeout: undefined};
 
           link.addEventListener("mouseenter", function(event){
             for (const [j, timer] of Object.entries(timers)) {
