Add `alt` text to navbar logo and wordmark

--- a/xanadu_sphinx_theme/header.html
+++ b/xanadu_sphinx_theme/header.html
@@ -1,11 +1,12 @@
 <nav>
   <!-- Logo and Title -->
 
-  <a class="navbar-logo-title-container" href="{{ pathto(theme_navbar_home_link, 1) }}">
+  <a class="navbar-logo-title-container" href="{{ pathto(theme_navbar_home_link, 1) }}" aria-label="home">
+    {% set navbar_alt = theme_navbar_logo_alt if theme_navbar_logo_alt else theme_navbar_name %}
     {% if theme_navbar_wordmark_path %}
-      <img class="navbar-logo-title-image" src="{{ pathto(theme_navbar_wordmark_path, 1) }}" height="24px"></img>
+      <img class="navbar-logo-title-image" src="{{ pathto(theme_navbar_wordmark_path, 1) }}" alt="{{ navbar_alt }}" height="24px"></img>
     {% else %}
-      <img class="navbar-logo-title-logo" src=" {{ pathto(theme_navbar_logo_path, 1) }}" height="24px"></img>
+      <img class="navbar-logo-title-logo" src=" {{ pathto(theme_navbar_logo_path, 1) }}" alt="{{ navbar_alt }}" height="24px"></img>
       <div class="navbar-logo-title-title">{{ theme_navbar_name }}</div>
     {% endif %}
   </a>
