Add ARIA labels to mobile navbar menu

--- a/xanadu_sphinx_theme/header.html
+++ b/xanadu_sphinx_theme/header.html
@@ -156,7 +156,7 @@
   {% endmacro %}
 
   <div class="navbar-menu mobile">
-    <button onclick="toggleMobileNavbar(this)">
+    <button onclick="toggleMobileNavbar(this)" aria-label="open menu" aria-expanded="false">
       <i class="bx bx-menu"></i>
       <i class="bx bx-x"></i>
     </button>
