--- a/xanadu_sphinx_theme/header.html
+++ b/xanadu_sphinx_theme/header.html
@@ -16,19 +16,19 @@
   {% macro render_desktop_navbar_left_link(name, href=None, img=None, width=None, external=false, dropdown=[]) %}
     <li class="navbar-left-link desktop">
       {% if img %}
-        <a href="{{ pathto(href, 1) }}">
+        <a href="{{ pathto(href, 1) }}" aria-label="{{ name }}">
           <img src="{{ pathto(img, 1) }}" height="35px" {% if width %} width="{{ width }}" {% endif %} />
           <span>{{ name }}</span>
         </a>
       {% else %}
-        <a href="{{ pathto(href, 1) }}" {% if external %} target="_blank" {% endif %}>
+        <a href="{{ pathto(href, 1) }}" aria-label="{{ name }}" {% if external %} target="_blank" {% endif %}>
           <span>{{ name }}</span>
           {% if external %}
             <i class="bx bx-link-external"></i>
           {% endif %}
         </a>
         {% if dropdown %}
-          <button>
+          <button aria-label="open {{ name }} sub-menu" aria-expanded="false">
             <i class="bx bx-chevron-down"></i>
           </button>
           <ul class="navbar-dropdown desktop">
@@ -97,7 +97,7 @@
   {% macro render_mobile_navbar_link(name, href, external=false, dropdown=[]) %}
     <li class="navbar-link mobile">
       {% if dropdown %}
-        <button class="navbar-link-heading mobile" onclick="toggleMobileNavbarLink(this)">
+        <button class="navbar-link-heading mobile" onclick="toggleMobileNavbarLink(this)" aria-label="open {{ name }} sub-menu" aria-expanded="false">
           <div>
             <span>{{ name }}</span>
             {% if external %}
