--- a/xanadu_sphinx_theme/layout.html
+++ b/xanadu_sphinx_theme/layout.html
@@ -420,6 +420,20 @@
     });
   </script>
 
+  <!-- Utility functions for setting ARIA attributes on buttons that show menus. -->
+  <script type="text/javascript">
+    function setAriaAttributes(button, expand) {
+      const skip = button.ariaLabel.indexOf(" ");
+      const menu = button.ariaLabel.substr(skip);
+      button.ariaLabel = (expand ? "close" : "open") + menu;
+      button.ariaExpanded = expand.toString();
+    }
+
+    function toggleAriaAttributes(button) {
+      setAriaAttributes(button, button.ariaExpanded === "false");
+    }
+  </script>
+
   <!-- Delays the closing of dropdowns on the LHS of the navigation bar. -->
   <script type="text/javascript">
     $(document).ready(() => {
@@ -427,22 +441,26 @@
       const navbar_left_links = document.querySelectorAll(".navbar-left-link");
       for (const [i, link] of navbar_left_links.entries()) {
         const dropdown = link.querySelector(".navbar-dropdown");
+        const button = link.querySelector("button");
         if (dropdown !== null) {
-          timers[i] = {link: link, timeout: undefined};
+          timers[i] = {link: link, button: button, timeout: undefined};
 
           link.addEventListener("mouseenter", function(event){
             for (const [j, timer] of Object.entries(timers)) {
               clearTimeout(timer.timeout);
               if (i !== j) {
                 timer.link.classList.remove("open")
+                setAriaAttributes(timer.button, false);
               }
             }
             link.classList.add("open");
+            setAriaAttributes(button, true);
           });
 
           link.addEventListener("mouseleave", function(event){
             timers[i].timeout = setTimeout(function(event){
               link.classList.remove("open");
+              setAriaAttributes(button, false);
             }, 1000);
           });
         }
@@ -468,13 +486,8 @@
       const dropdown = document.querySelector(".mobile.navbar-links");
       if (dropdown !== null) {
         dropdown.classList.toggle("open");
-        if (button.classList.toggle("open")) {
-          button.ariaLabel = "close menu";
-          button.ariaExpanded = "true";
-        } else {
-          button.ariaLabel = "open menu";
-          button.ariaExpanded = "false";
-        }
+        button.classList.toggle("open");
+        toggleAriaAttributes(button);
       }
     }
   </script>
@@ -482,7 +495,8 @@
   <!-- Toggles whether the dropdown from a navbar link is displayed on mobile. -->
   <script type="text/javascript">
     function toggleMobileNavbarLink(button) {
-      const link = button.parentElement.classList.toggle("open");
+      button.parentElement.classList.toggle("open");
+      toggleAriaAttributes(button);
     }
   </script>
 
