--- a/xanadu_sphinx_theme/header.html
+++ b/xanadu_sphinx_theme/header.html
@@ -16,12 +16,12 @@
   {% macro render_desktop_navbar_left_link(name, href=None, img=None, width=None, external=false, dropdown=[]) %}
     <li class="navbar-left-link desktop">
       {% if img %}
-        <a href="{{ pathto(href, 1) }}" aria-label="{{ name }}">
+        <a href="{{ pathto(href, 1) }}">
           <img src="{{ pathto(img, 1) }}" height="35px" {% if width %} width="{{ width }}" {% endif %} />
           <span>{{ name }}</span>
         </a>
       {% else %}
-        <a href="{{ pathto(href, 1) }}" aria-label="{{ name }}" {% if external %} target="_blank" {% endif %}>
+        <a href="{{ pathto(href, 1) }}" {% if external %} target="_blank" {% endif %}>
           <span>{{ name }}</span>
           {% if external %}
             <i class="bx bx-link-external"></i>
